[tool.poetry]
name = "steins-feed-model"
version = "0.1.0"
description = ""
authors = ["Hans Yu <hans.yu@outlook.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
numpy = "^1.26.1"
scikit-learn = "^1.3.1"
sqlalchemy = "^2.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
